--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
   
               request.send(JSON.stringify(params));
             alert("Your feedback has been submmitted and sent! Thanks for the feedback :3");
+	    setTimeout(async() => {
+              window.location.href = "https://mrlumpia.github.io/"
+	    }, 1000);
   } 
  </script>
 
